# orcamentoOFX

./: .gitignore  LICENSE  README.md  manage.py  pyproject.toml
backend/: README.md
backend/api/: __init__.py  admin.py  healthcheck.py  models.py  schemas.py  urls.py
backend/api/migrations/: 0001_initial.py
backend/api/v1/routers/: __init__.py  hello.py  lancamentos_router.py  ofx_import.py
backend/api/v1/schemas/: __init__.py
backend/api/v1/services/: ingest_data.py
backend/config/: asgi.py  urls.py  wsgi.py
backend/config/settings/: __init__.py  base.py  development.py  production.py
budget_api/: .env-example  README.md  requirements.txt
budget_api/api/: admin.py  models.py  schemas.py  urls.py
budget_api/api/routers/: lancamentos_router.py
budget_api/config/: asgi.py  urls.py  wsgi.py
budget_api/config/settings/: __init__.py  base.py  development.py  production.py
contrib/: .env-example
tests/api/: test_healthcheck.py
tests/api/v1/: test_ofx_import.py
